Bug 56980 - EDITING: Custom shape becomes text field or disappears when editing text or color from saved file
Summary: EDITING: Custom shape becomes text field or disappears when editing text or c...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
4.0.0.0.alpha0+ Master
Hardware: x86-64 (AMD64) Linux (All)
: high critical
Assignee: David Tardon
URL:
Whiteboard: target:4.0.0 target:4.1.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-11-11 14:33 UTC by Lennard Wasserthal
Modified: 2012-12-24 15:40 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lennard Wasserthal 2012-11-11 14:33:31 UTC
Steps to reproduce:

In Impress:
Draw a right arrow or a rectangle (perhaps any shape will do).
save as odp.
close.
load the file.
edit the text
stop text editing with [escape] or click onto the side of the object.
The object is turned into a text field now.

Other way:

In Impress:
Draw a right arrow or a rectangle (perhaps any shape will do).
save as odp.
close.
load the file.
change the fill color of the shape.
The shape is gone

bug was not there in 3.5.4.2!
Comment 1 Rob Snelders 2012-11-11 19:29:59 UTC
Confirmed with 3.7.0.0-Alpha on Ubuntu 12.04 x86_64.

This is a regression.

Bug is there for objects in Impress, Draw and Writer.
Comment 2 Rob Snelders 2012-11-11 19:31:57 UTC
When you save the file afterwards.
Then close it and open it again then the shape is visible again and changed.
Comment 3 Lennard Wasserthal 2012-11-18 17:31:46 UTC
Bug seems to be caused indirectly. it disappeared shortly but comes back.

bug present at f9735c65aaad195c1e6a4586d173ee30ad08e685
bug not present at ddd44eb48fa03ea36fe32a3f7c9023828c1e449c.
bug not present at f9735c65aaad195c1e6a4586d173ee30ad08e685
bug present at 1444a0de4414a6d01a8c23986f58229361c57f84

=> Mandelbug
Comment 4 Ivan Timofeev (retired) 2012-11-23 16:47:41 UTC
Looks like another side effect of the custom shape performance improvements in svx/source/svdraw/svdoashp.cxx.
Comment 5 Lennard Wasserthal 2012-12-01 14:31:00 UTC
It can be shown again by dropping an other object on it at different positions.
=> DOES it be a gfx update problem?
Comment 6 Not Assigned 2012-12-03 14:45:21 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=76350361f386b78e1bc9edb75af89e7ff3afe356

fdo#56980 drop cached shape engine on invalidation



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Michael Meeks 2012-12-13 21:33:32 UTC
This fix seems to cause bug#58267 :-)
Comment 8 Not Assigned 2012-12-24 15:24:52 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=31b93b8600a3e219d33173aa68d9ab570e477e50

fdo#56980, fdo#58267 don't leave stale SdrObject refs around



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Not Assigned 2012-12-24 15:40:45 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=917616f1e15f06533f7380a309b1ccea0920f8f6&h=libreoffice-4-0

fdo#56980, fdo#58267 don't leave stale SdrObject refs around


It will be available in LibreOffice 4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.