fdo#56980 drop cached shape engine on invalidation

Change-Id: I9591375e1f7d1b6f69ca9a39add52a94ac852c7f